force-app/main/default/objects/Certification__c/Certification__c.object-meta.xml
<CustomObject>
    <label>Certification</label>
    <nameField>
        <displayFormat>CERT-{00000}</displayFormat>
        <label>Certification Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>