force-app/main/default/objects/Certification__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <label>Certification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Advanced Field Service</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud B2B Admin</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud B2B Dev</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Data Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Health Cloud AP</fullName>
            </value>
            <value>
                <fullName>Maps</fullName>
            </value>
            <value>
                <fullName>Mulesoft Integration Associate</fullName>
            </value>
            <value>
                <fullName>Non-Profit Cloud</fullName>
            </value>
            <value>
                <fullName>Order Management Admin</fullName>
            </value>
            <value>
                <fullName>Order Management Developer</fullName>
            </value>
            <value>
                <fullName>Revenue Cloud Consultant Accredited Professional</fullName>
            </value>
            <value>
                <fullName>Sales Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Service Cloud Consultant</fullName>
            </value>
            <value>
                <fullName>Field Service Consultant</fullName>
            </value>
            <value>
                <fullName>CPQ Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>