force-app/main/default/objects/Certification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Certification__c</columns>
    <columns>Status__c</columns>
    <columns>Voucher_Code__c</columns>
    <columns>Exam_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>